force-app/main/default/objects/ccrz__E_Spec__c/ccrz__E_Spec__c.object-meta.xml
<CustomObject>
    <description>Object used to hold product specifications.  These specifications represent groups of attributes which can be in the form of additional product information, information that is searchable, and information that can be used for filtering search results.</description>
    <label>CC Spec</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>