force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__Desc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Desc__c</fullName>
    <description>Description of the specification - not displayed to external users</description>
    <label>Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>