force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayName__c</fullName>
    <description>The spec name to be displayed in the catalog</description>
    <label>DisplayName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>