force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__FilterDisplayName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FilterDisplayName__c</fullName>
    <description>The spec name to be displayed in the filters</description>
    <label>Filter DisplayName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>