force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__FilterType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FilterType__c</fullName>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
                <default>true</default>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>