force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <description>The locale that corresponds to this specification, for example en_US</description>
    <label>Locale</label>
    <length>25</length>
    <type>Text</type>
</CustomField>