force-app/main/default/objects/ccrz__E_Spec__c/fields/ccrz__SpecID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SpecID__c</fullName>
    <description>The external id for this record</description>
    <externalId>true</externalId>
    <label>Spec ID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>