force-app/main/default/objects/ccrz__E_Spec__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__SpecID__c</columns>
    <columns>ccrz__SpecGroup__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <columns>ccrz__UseForFilter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>